# nn_lite

./: .clang-format  .gitignore  CMakeLists.txt
include/: Linear.h  linear.h  sigmoid.h
src/: Linear.cpp  linear.cpp  sigmoid.cpp
tests/: Linear.cpp  linear_test.cpp  sigmoid_test.cpp
util/include/: isclose.h  linear_test_util.h  print_util.h  sigmoid_test_util.h
util/src/: isclose.cpp  linear_test_util.cpp  print_util.cpp  sigmoid_test_util.cpp
